syntax = "proto3";
package user;

service UserService {
    rpc ListUserPartner(UserPartnerRequest) returns (UserPartner);
}

message UserPartner  {
	string id = 1;
	string user_id = 2;
	string partner_id = 3;
	string alias_user_id = 4;        
	map<string,int64> apps = 5;
	string phone = 6;                 
	int64 created = 7;             
	int64 updated_at = 8;            
}

message UserPartnerRequest  {
	string user_id = 1;
	string phone = 2;                 
	int64 limit = 3;                
}